<resources>
    <string name="app_name">Unisphere</string>


    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>


    <string name="firebase_db_url">https://unisphere-340ac-default-rtdb.firebaseio.com/</string>

    <string name="title_home">Feed</string>

    <string name="title_feed">Feed</string>

    <string name="title_events">Events</string>
    <string name="title_search">Search</string>
    <string name="title_messenger">Messenger</string>
    <string name="title_profile">Profile</string>
    <string name="title_post_details">Post Details</string>
    <string name="title_event_details">Event Details</string>
    <string name="title_create_event">Create New Event</string>
    <string name="title_edit_event">Edit Event</string>

    <string name="posts">posts</string>
    <string name="events">events</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up_label">Sign Up</string>


    <string-array name="user_roles">
        <item>Student</item>
        <item>Organization</item>

    </string-array>

    <string-array name="universities">
        <item>Northeastern University</item>
        <item>Boston University</item>
    </string-array>
    <string-array name="domains">
        <item>@northeastern.edu</item>
        <item>@bu.edu</item>
    </string-array>
</resources>