<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.unisphere.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_events"
        android:name="com.example.unisphere.ui.events.EventsFragment"
        android:label="@string/title_events"
        tools:layout="@layout/fragment_events" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.unisphere.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_messenger"
        android:name="com.example.unisphere.ui.messenger.MessengerFragment"
        android:label="@string/title_messenger"
        tools:layout="@layout/fragment_messenger" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.unisphere.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>